--- a/port.css
+++ b/port.css
@@ -383,12 +383,15 @@ background-size: cover;
 }
 .footer li {
     float: left!important;
-    margin: 20px 100px 0px 100px;
-    padding: 24px 0px 0px 0px;
+    width:100%;
+    margin:unset;
+    padding: 20px 25%;	
 }
 .footer li:first-child{
-margin: 20px 100px 0px 100px;
-    padding: 29px 0px 0px 0px;
+width:100%;
+margin:unset;
+font-size:1em;
+padding: 70px 25% 20px 25%;	
 }
 .ayurfy{
 	padding: 0px 30px;
