--- a/port.css
+++ b/port.css
@@ -331,10 +331,10 @@ background-size: cover;
 }
 .aboutme h2{
 	line-height: 1;
-	font-size: 2.1em;
+	font-size: 1.8em;
 }
 .aboutme p{
-	font-size: 1.2em;
+	font-size: 1em;
 }
  .col-sm-12 {
 	margin-top: 30px;
@@ -345,16 +345,35 @@ background-size: cover;
 }
 .education-content{
 	height: auto;
-	font-size: 1.2em;
+	font-size: 1em;
 }
+	.education-content h3{
+	font-size:1.4em;
+	}
+	.contact-content{
+		font-size:1em;
+	}
+	.contact-content h3{
+	font-size:1.4em;
+	}
 .book img{
 	right: 0px;
 }
 .personal h3 {
     margin-bottom: 20px;
+	font-size:1.4em;
 }
+	.personal-content p{
+		font-size:1em;
+	}
+	.personal-content h3{
+		font-size:1.4em;
+	}
+	
+	
 .Professional{
 	margin-top: 30px;
+	font-size:1em;
 }
 .office {
 	top:0px;
