--- a/port.css
+++ b/port.css
@@ -383,14 +383,15 @@ background-size: cover;
 }
 .skills{
 	background: url(middle-banner1.png);
+	background-size:cover;
 	height: none;
-/* 	margin-top: 30px; */
+	margin-top: 30px;
 	   
 }
 .skills li {
     float: left;
     width: 40%;
-    margin: 40px 13px;
+    margin: 60px 13px 0px 13px;
     }
     /* .skills li:nth-child(1,2) {
     	margin-top: 10px;
