--- a/port.css
+++ b/port.css
@@ -359,6 +359,9 @@ background-size: cover;
 .book img{
 	right: 0px;
 }
+	.personal{
+		margin-top:30px;
+	}
 .personal h3 {
     margin-bottom: 20px;
 	font-size:1.4em;
@@ -369,7 +372,9 @@ background-size: cover;
 	.personal-content h3{
 		font-size:1.4em;
 	}
-	
+	.Professional-content h3{
+		font-size:1.4em;
+	}
 	
 .Professional{
 	margin-top: 30px;
@@ -392,6 +397,7 @@ background-size: cover;
     float: left;
     width: 40%;
     margin: 60px 13px 0px 13px;
+	font-size:1em;
     }
     /* .skills li:nth-child(1,2) {
     	margin-top: 10px;
