--- a/port.css
+++ b/port.css
@@ -3,6 +3,7 @@ body{
 	margin: 0;
 	box-sizing: border-box;
 	font-family: open-sans;
+	font-size:16px;
 }
 .header{
 	background: #f7f7f7  url(banner.png) top center no-repeat;
@@ -65,7 +66,6 @@ background-size: cover;
 }
 .personal-content{
 	position: relative;
-	font-size: 1.2em;
 	height: 210px;
 }
 .personal h3{
@@ -228,7 +228,6 @@ margin: 70px 13px;
 .Professional-content {
 	position: relative !important;
 	height:180px;
-	font-size: 17px;
 }
 /* .professional-content img{
 	position: absolute !important;
@@ -380,6 +379,11 @@ background-size: cover;
 	margin-top: 30px;
 	font-size:1em;
 }
+	.Professional-cotent li{
+		margin:unset;
+		padding:5px;
+		float:left!important;
+	}
 .office {
 	top:0px;
 }
